[package]
name = "rust-line-filter"
version = "1.0.0"
edition = "2021"
authors = ["misterbug <misterbug@duck.com>"]
description = "A command line utility to filter repeated lines"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
