[package]
name = "rust-line-filter"
version = "1.1.1"
edition = "2021"
authors = ["ThePixelCode <thepixelcode@duck.com>"]
description = "A command line utility to filter repeated lines"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
